--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,10 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SettingsActivity"
-    android:background="#949393">
+    android:background="#c9c9c9"
+    android:orientation="vertical"
+    android:gravity="center">
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/difficulty_level"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:text="@string/difficulty_level"
+        android:textSize="25sp"
+        android:textStyle="normal"
+        android:paddingTop="30dp"/>
+
+    <RadioGroup
+        android:id="@+id/radio_group"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center">
+
+        <RadioButton
+            android:id="@+id/button_easy"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginTop="50dp"
+            android:layout_marginLeft="50dp"
+            android:text="@string/easy"
+            android:textSize="17sp"
+            android:textStyle="italic"
+            android:checked="true"/>
+
+        <RadioButton
+            android:id="@+id/button_average"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:layout_marginLeft="50dp"
+            android:layout_weight="1"
+            android:text="@string/average"
+            android:textSize="17sp"
+            android:textStyle="italic"/>
+
+        <RadioButton
+            android:id="@+id/button_difficult"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:layout_marginLeft="50dp"
+            android:layout_weight="1"
+            android:text="@string/difficult"
+            android:textSize="17sp"
+            android:textStyle="italic"/>
+
+    </RadioGroup>
+
+</LinearLayout>
